Gap fix

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@
 body{
   font-family:verdana;
   display:flex;
+  gap: 5px;
 }
 img{
   border: 6px solid #FAD691;
